--- a/NotABadPlayer/app/src/main/AndroidManifest.xml
+++ b/NotABadPlayer/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".View.Launch.LaunchActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,12 +26,16 @@
 
         <activity
             android:name=".View.Main.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
 
         <activity
             android:name=".View.Player.PlayerActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
