--- a/NotABadPlayer/app/src/main/AndroidManifest.xml
+++ b/NotABadPlayer/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             android:label="@string/app_name"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="adjustPan|stateHidden">
         </activity>
 
         <activity
