--- a/NotABadPlayer/app/src/main/AndroidManifest.xml
+++ b/NotABadPlayer/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         </activity>
 
         <activity
-            android:name=".View.CreateLists.CreatePlaylistActivity"
+            android:name=".View.Lists.CreatePlaylistActivity"
             android:label="@string/app_name"
             android:configChanges="orientation"
             android:screenOrientation="portrait">
