--- a/NotABadPlayer/app/src/main/AndroidManifest.xml
+++ b/NotABadPlayer/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
+        android:name=".PlayerApplication"
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
@@ -18,26 +19,11 @@
             android:label="@string/app_name"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan|stateHidden"
-            android:launchMode="singleTask">
-        </activity>
-
-        <activity
-            android:name=".View.Main.LaunchMainActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait">
+            android:windowSoftInputMode="adjustPan|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        
-        <activity
-            android:name=".View.Main.ViewMainActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -48,8 +34,11 @@
                 <data android:mimeType="application/x-ogg"/>
                 <data android:mimeType="application/itunes"/>
             </intent-filter>
+            <intent-filter>
+                <action android:name="Broadcast.ApplicationIsRunning" />
+            </intent-filter>
         </activity>
-        
+
         <activity
             android:name=".View.Player.PlayerActivity"
             android:label="@string/app_name"
