Migrated to new Gradle 8.4; Set target SDK to 33, min SDK to 19

--- a/NotABadPlayer/app/src/main/AndroidManifest.xml
+++ b/NotABadPlayer/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.media.notabadplayer">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
@@ -18,6 +18,7 @@
         
         <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
@@ -56,7 +57,9 @@
             android:screenOrientation="portrait">
         </activity>
 
-        <service android:enabled="true" android:name=".Audio.Players.AudioPlayerService" android:stopWithTask="false">
+        <service android:enabled="true" android:name=".Audio.Players.AudioPlayerService"
+            android:exported="true"
+            android:stopWithTask="false">
             <intent-filter>
                 <action android:name="AudioPlayerService.play" />
                 <action android:name="AudioPlayerService.pause" />
